tests/parsing/smtlib/mcil/errors/285_check-system_bad_attribute_7.mcil
(check-system sys :assumption (a f) _)